[package]
name = "eventmill"
version = "0.1.0"
authors = ["haraldmaida"]
license = "MIT/Apache-2.0"

description = "Event sourcing and CQRS for Rust applications"

keywords = ["event-sourcing", "cqrs", "aggregate", "ddd"]
categories = ["architecture", "pattern"]

edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
bigdecimal = { version = "0.1", features = ["serde"] }
version-sync = "0.9"
