[package]
name = "eventmill_derive"
version = "0.2.0"
authors = ["haraldmaida"]
license = "MIT/Apache-2.0"

description = "Derive macros for convient implementation of some traits of the `eventmill` crate"

keywords = ["event-sourcing", "cqrs", "aggregate", "ddd"]
categories = ["architecture", "pattern"]

documentation = "https://docs.rs/eventmill_derive"
repository = "https://github.com/innoave/eventmill/tree/master/eventmill-derive"
readme = "README.md"

edition = "2018"
autotests = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["extra-traits"] }
quote = "1"

[dev-dependencies]
eventmill = { path = "../" }
trybuild = "1"

[[test]]
name = "tests"
path = "tests/all_tests.rs"
