[package]
name = "eventmill_derive"
version = "0.3.0"
authors = ["haraldmaida"]
license = "MIT/Apache-2.0"

description = "Derive macros for convient implementation of some traits of the `eventmill` crate"

keywords = ["event-sourcing", "cqrs", "aggregate", "ddd"]
categories = ["architecture", "pattern"]

documentation = "https://docs.rs/eventmill_derive"
repository = "https://github.com/innoave/eventmill/tree/master/eventmill-derive"
readme = "README.md"

edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }

[dev-dependencies]
eventmill = { path = "../eventmill" }
trybuild = "1"
