[package]
name = "eventmill-examples"
version = "0.3.0"
authors = ["haraldmaida"]
license = "MIT/Apache-2.0"

description = "Examples using the eventmill crate"

keywords = ["event-sourcing", "cqrs", "aggregate", "ddd", "examples"]
categories = ["architecture", "pattern"]

repository = "https://github.com/innoave/eventmill/tree/master/eventmill-examples"
readme = "README.md"

edition = "2018"
publish = false

[dependencies]

[dev-dependencies]
eventmill = { features = ["derive"], path = "../eventmill" }
derive_more = "0.99"
#enum_dispatch = "0.3"
#typetag = "0.1"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bigdecimal = { version = "0.1", features = ["serde"] }
thiserror = "1"

[[example]]
name = "counter"
path = "counter/main.rs"

[[example]]
name = "banking"
path = "banking/main.rs"

[[example]]
name = "turtle"
path = "turtle/main.rs"
