[package]
name = "eventmill-examples"
version = "0.4.0"
edition = "2021"
authors = ["haraldmaida"]
license = "MIT/Apache-2.0"

description = "Examples using the eventmill crate"

keywords = ["event-sourcing", "cqrs", "aggregate", "ddd", "examples"]

repository = "https://github.com/innoave/eventmill/tree/main/eventmill-examples"
readme = "../README.md"

publish = false

[dependencies]

[dev-dependencies]
eventmill = { features = ["derive"], path = "../eventmill" }
derive_more = "0.99"
#enum_dispatch = "0.3"
#typetag = "0.1"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bigdecimal = { version = "0.4", features = ["serde"] }
thiserror = "1"

[[example]]
name = "counter"
path = "counter/main.rs"

[[example]]
name = "banking"
path = "banking/main.rs"

[[example]]
name = "turtle"
path = "turtle/main.rs"
