[package]
name = "eventmill"
version = "0.4.0"
edition = "2021"
authors = ["haraldmaida"]
license = "MIT/Apache-2.0"

description = "Event sourcing and CQRS for Rust applications"

keywords = ["event-sourcing", "cqrs", "aggregate", "ddd"]

documentation = "https://docs.rs/eventmill"
repository = "https://github.com/innoave/eventmill"
readme = "../README.md"

[features]
default = ["chrono"]
derive = ["eventmill_derive"]

[dependencies]
eventmill_derive = { version = "0.3", optional = true, path = "../eventmill-derive" }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = ["serde","formatting","parsing"], optional = true }

[dev-dependencies]
proptest = "1"
version-sync = "0.9"

[package.metadata.docs.rs]
all-features = true
